crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_cons_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (mkCons (con (pair data data) ((I 42), (I 42))) (con (list (pair data data)) [])) of
  DataMap payload#67 -> (con (list (pair data data)) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_68
    (force
      [[[[[[(force (builtin chooseData)) generated_68] (delay (error))]
        (delay (con (list (pair data data)) []))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData)
      [[(force (builtin mkCons)) (con (pair data data) ((I 42), (I 42)))]
        (con (list (pair data data)) [])]]])
--- optimized Core
let anf#2 : list (pair Data Data) = mkCons (con (pair data data) ((I 42), (I 42))) (con (list (pair data data)) []) in
let anf#3 : Data = mapData anf#2 in
case@Data anf#3 of
  DataMap payload#1 -> (con (list (pair data data)) [])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_8
    [(lam builtin_9
      [(lam anf_4
        [(lam anf_5
          [(lam generated_7
            (force
              [[[[[[builtin_8 generated_7] (delay (error))]
                (delay (con (list (pair data data)) []))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            anf_5])
          [(builtin mapData) anf_4]])
        [[builtin_9 (con (pair data data) ((I 42), (I 42)))]
          (con (list (pair data data)) [])]])
      (force (builtin mkCons))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#68 : list (pair Data Data) = mkCons (con (pair data data) ((I 42), (I 42))) (con (list (pair data data)) []) in
let anf#69 : Data = mapData anf#68 in
case@Data anf#69 of
  DataMap payload#67 -> (con (list (pair data data)) [])
--- isolated folded Core
let anf#68 : list (pair Data Data) = mkCons (con (pair data data) ((I 42), (I 42))) (con (list (pair data data)) []) in
let anf#69 : Data = mapData anf#68 in
let payload#67 : list (pair Data Data) = anf#68 in
(con (list (pair data data)) [])
--- isolated cleaned Core
let anf#68 : list (pair Data Data) = mkCons (con (pair data data) ((I 42), (I 42))) (con (list (pair data data)) []) in
let anf#69 : Data = mapData anf#68 in
(con (list (pair data data)) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_68
    [(lam anf_69
      [(lam generated_70
        (force
          [[[[[[(force (builtin chooseData)) generated_70] (delay (error))]
            (delay (con (list (pair data data)) []))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_69])
      [(builtin mapData) anf_68]])
    [[(force (builtin mkCons)) (con (pair data data) ((I 42), (I 42)))]
      (con (list (pair data data)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_68
    [(lam anf_69 (con (list (pair data data)) [])) [(builtin mapData) anf_68]])
    [[(force (builtin mkCons)) (con (pair data data) ((I 42), (I 42)))]
      (con (list (pair data data)) [])]])
--- result
(con (list (pair data data)) [])
--- logs
[]
