crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_default_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (trace "operand" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])) of
  DataList wrong#16 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_17
    (force
      [[[[[[(force (builtin chooseData)) generated_17]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]))
    [(builtin mapData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay
            (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))])]])
--- optimized Core
let anf#2 : list (pair Data Data) = trace "operand" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let anf#3 : Data = mapData anf#2 in
trace "fallback" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_1
      [(lam anf_4
        (force [[builtin_5 (con string "fallback")] (delay (con integer 9))]))
        [(builtin mapData) anf_1]])
      (force
        [[builtin_5 (con string "operand")]
          (delay
            (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#19 : list (pair Data Data) = trace "operand" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let anf#20 : Data = mapData anf#19 in
case@Data anf#20 of
  DataList wrong#16 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- isolated folded Core
let anf#19 : list (pair Data Data) = trace "operand" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let anf#20 : Data = mapData anf#19 in
trace "fallback" in 9
--- isolated cleaned Core
let anf#19 : list (pair Data Data) = trace "operand" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let anf#20 : Data = mapData anf#19 in
trace "fallback" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_19
    [(lam anf_20
      [(lam generated_21
        (force
          [[[[[[(force (builtin chooseData)) generated_21]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]))
        anf_20])
      [(builtin mapData) anf_19]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay
          (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_19
    [(lam anf_20
      (force
        [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))
      [(builtin mapData) anf_19]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay
          (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))])])
--- result
(con integer 9)
--- logs
["operand", "fallback"]
