crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_empty_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list (pair data data)) []) of
  DataMap payload#61 -> (con (list (pair data data)) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_62
    (force
      [[[[[[(force (builtin chooseData)) generated_62] (delay (error))]
        (delay (con (list (pair data data)) []))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list (pair data data)) [])]])
--- optimized Core
(con (list (pair data data)) [])
--- optimized UPLC
(program 1.1.0 (con (list (pair data data)) []))
--- isolated pass
--- isolated ANF input
let anf#62 : Data = mapData (con (list (pair data data)) []) in
case@Data anf#62 of
  DataMap payload#61 -> (con (list (pair data data)) [])
--- isolated folded Core
let data_operand#63 : list (pair Data Data) = (con (list (pair data data)) []) in
let anf#62 : Data = mapData data_operand#63 in
let payload#61 : list (pair Data Data) = data_operand#63 in
(con (list (pair data data)) [])
--- isolated cleaned Core
let anf#62 : Data = mapData (con (list (pair data data)) []) in
(con (list (pair data data)) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_62
    [(lam generated_63
      (force
        [[[[[[(force (builtin chooseData)) generated_63] (delay (error))]
          (delay (con (list (pair data data)) []))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_62])
    [(builtin mapData) (con (list (pair data data)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_62 (con (list (pair data data)) []))
    [(builtin mapData) (con (list (pair data data)) [])]])
--- result
(con (list (pair data data)) [])
--- logs
[]
