crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_empty_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list (pair data data)) []) of
  DataMap payload#64 -> payload#64
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_65
    (force
      [[[[[[(force (builtin chooseData)) generated_65] (delay (error))]
        (delay [(lam payload_64 payload_64) [(builtin unMapData) generated_65]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list (pair data data)) [])]])
--- optimized Core
let anf#2 : Data = mapData (con (list (pair data data)) []) in
case@Data anf#2 of
  DataMap payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))]
            (delay [(lam payload_4 payload_4) [(builtin unMapData) generated_5]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin mapData) (con (list (pair data data)) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#65 : Data = mapData (con (list (pair data data)) []) in
case@Data anf#65 of
  DataMap payload#64 -> payload#64
--- isolated folded Core
let data_operand#66 : list (pair Data Data) = (con (list (pair data data)) []) in
let anf#65 : Data = mapData data_operand#66 in
let payload#64 : list (pair Data Data) = data_operand#66 in
payload#64
--- isolated cleaned Core
let data_operand#66 : list (pair Data Data) = (con (list (pair data data)) []) in
let anf#65 : Data = mapData data_operand#66 in
data_operand#66
--- isolated UPLC before
(program 1.1.0
  [(lam anf_65
    [(lam generated_66
      (force
        [[[[[[(force (builtin chooseData)) generated_66] (delay (error))]
          (delay [(lam payload_64 payload_64) [(builtin unMapData) generated_66]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_65])
    [(builtin mapData) (con (list (pair data data)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_66
    [(lam anf_65 data_operand_66) [(builtin mapData) data_operand_66]])
    (con (list (pair data data)) [])])
--- result
(con (list (pair data data)) [])
--- logs
[]
