crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_invalid_bool_fallback_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData true of
  DataMap unused#59 -> 9
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_60
    (force
      [[[[[[(force (builtin chooseData)) generated_60]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay (con integer 9))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin mapData) (con bool True)]])
--- optimized Core
let anf#2 : Data = mapData true in
9
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con integer 9)) [(builtin mapData) (con bool True)]])
--- isolated pass
--- isolated ANF input
let anf#60 : Data = mapData true in
case@Data anf#60 of
  DataMap unused#59 -> 9
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#61 : bool = true in
let anf#60 : Data = mapData data_operand#61 in
let unused#59 : bool = data_operand#61 in
9
--- isolated cleaned Core
let anf#60 : Data = mapData true in
9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_60
    [(lam generated_61
      (force
        [[[[[[(force (builtin chooseData)) generated_61]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay (con integer 9))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_60])
    [(builtin mapData) (con bool True)]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_60 (con integer 9)) [(builtin mapData) (con bool True)]])
--- result
error: Runtime(ExpectedList(Boolean(true)))
--- logs
[]
