crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_invalid_delay_fallback_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (delay (\x#58 : int -> x#58)) of
  DataMap unused#71 -> 9
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_72
    (force
      [[[[[[(force (builtin chooseData)) generated_72]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay (con integer 9))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin mapData) (delay (lam x_58 x_58))]])
--- optimized Core
let anf#3 : Data = mapData (delay (\x#1 : int -> x#1)) in
9
--- optimized UPLC
(program 1.1.0
  [(lam anf_4 (con integer 9)) [(builtin mapData) (delay (lam x_2 x_2))]])
--- isolated pass
--- isolated ANF input
let anf#72 : Data = mapData (delay (\x#58 : int -> x#58)) in
case@Data anf#72 of
  DataMap unused#71 -> 9
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#73 : @delay (int -> int) = delay (\x#58 : int -> x#58) in
let anf#72 : Data = mapData data_operand#73 in
let unused#71 : @delay (int -> int) = data_operand#73 in
9
--- isolated cleaned Core
let anf#72 : Data = mapData (delay (\x#58 : int -> x#58)) in
9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_72
    [(lam generated_73
      (force
        [[[[[[(force (builtin chooseData)) generated_73]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay (con integer 9))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_72])
    [(builtin mapData) (delay (lam x_58 x_58))]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_72 (con integer 9)) [(builtin mapData) (delay (lam x_58 x_58))]])
--- result
error: NotAConstant(Delay(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)) }, Empty))
--- logs
[]
